--- a/codgen-core/pom.xml
+++ b/codgen-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>codgen</artifactId>
         <groupId>com.github.codgen</groupId>
-        <version>1.0.0</version>
+        <version>1.1.1</version>
     </parent>
     <artifactId>codgen-core</artifactId>
 
@@ -54,6 +54,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
         </dependency>
     </dependencies>
 </project>
