--- a/codgen-cmd/src/main/resources/conf/pom.properties
+++ b/codgen-cmd/src/main/resources/conf/pom.properties
@@ -1,4 +1,4 @@
 groupId=${project.groupId}
 artifactId=${project.artifactId}
 version=${project.version}
-timestamp=${build.time}
+timestamp=${build.timestamp}
